# rixarag

./: .gitignore  pyproject.toml  readme.md
PyALM.egg-info/: PKG-INFO  SOURCES.txt
docs/source/: conf.py  index.md
docs/source/modules/: module_settings.md
rixarag/: __init__.py  database.py  pipelines.py  settings.py
rixarag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rixarag/.ipynb_checkpoints/: __init__-checkpoint.py  function_helpers-checkpoint.py  glm-checkpoint.py  llama-checkpoint.py  misc-checkpoint.py  openai-checkpoint.py  resources-checkpoint.py
rixarag/parsing/: __init__.py  image_captioning.py  pdf_page_matcher.py  regex_parser.py  semantic_chunking.py  unstructured.py  wikipedia.py
rixarag/tools/: webscraper.py
